06Jan99========================================================================
1. Do some range checking for spots and WWV in the future (got a WWV for Oct 
2034 whhich caused a bit of confusion!)
2. Make WWV spots broadcast them to the users! (as opposed to merely storing 
them)(thank you G0RDI).
3. Allow users to do show/announce (thank you JE1SGH).
4. Delay broadcasts to users if they are not in a 'prompt' state (means you can
add messages and see what you are doing on a busy system)
5. Made set/unset dx,ann,wx,talk,wwv do what is expected
6. added set/sys_location and set/set_qra to set the cluster lat/long and qra
7. New messages will now be announced on logon (if there are any)
03Jan99========================================================================
1. Upped the version no !!!!
2. made the DXProtocol routines much less sensitive to '~' characters (JE1SGH)
3. added '^' -> ':' conversions on ann, talk and dx commands
4. You can now send messages containing blank lines.
5. Fixed merge command problem reported by G0RDI
28Dec98========================================================================
1. Crossed fingers, got rid of the instabilities caused by execing programs
at vast speed (reduced it significantly anyway).
2. Personals will now move if homenode is known.
3. Added Local.pm for doing local specials
27Dec98========================================================================
1. Various detail changes to remove some more warning with -w on
2. Added DXCron handling - you can do crontabs now.
3. Added show/program command so you can see where it is loading your .pm files
from.
4. Added pc26/27 replies to locally connected cluster's merge (pc25) requests
5. Added spotters DXCC and original cluster to Spot data files.
23Dec98========================================================================
1. Reindented various things
2. Added missing $main::mycall on the end of outgoing PC11s (!)
3. Check that PC16/17 node calls really are nodes (AFAIAC).